--- a/style.css
+++ b/style.css
@@ -92,8 +92,8 @@ body {
     z-index: 1000; /* Lasciato alto per la barra di navigazione */
     backdrop-filter: blur(6px);
 }
-.logo { font-size:1rem; font-weight:bold; margin-left: 400px; }
-.menu { list-style:none; display:flex; gap:2rem; }
+.logo { font-size:1rem; font-weight:bold; }
+.menu { list-style:none; display:flex; gap:2rem; margin-left: 400px; }
 .menu a { color:white; text-decoration:none; }
 .menu a:hover { text-decoration:underline; }
 
