--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body {
     width: 100%; 
     height: 100%;
     object-fit: cover;
+    object-position: top;
     z-index: 2; /* Livello intermedio: dietro al testo */
 }
 
